deploy/kubernetes/overlays/gcp/base/arches-api-deployment.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arches-api
spec:
  template:
    spec:
      containers:
        - name: arches-api
          volumeMounts:
            - mountPath: /usr/src/app/server-ca.pem
              name: arches-redis-ca-cert
              subPath: redis-ca.pem
        - name: cloud-sql-proxy
          image: gcr.io/cloud-sql-connectors/cloud-sql-proxy:2.8.1
          args:
            - "--structured-logs"
            - "--port=5432"
            - "archesai:us-east1:arches-postgres"
          securityContext:
            runAsNonRoot: true
          resources:
            requests:
              memory: "100Mi"
              cpu: "100m"
            limits:
              memory: "200Mi"
              cpu: "200m"
      volumes:
        - name: arches-redis-ca-cert
          secret:
            secretName: arches-redis-ca-cert
