deploy/kubernetes/overlays/gcp/base/arches-ui-ingress.patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: arches-ui-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: arches-ui-static-ip
    networking.gke.io/managed-certificates: arches-ui-certificate
    networking.gke.io/v1beta1.FrontendConfig: arches-frontend-config
spec:
  rules:
    - host: platform.archesai.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: arches-ui
                port:
                  number: 443
